--- a/app/views/voices/_form.html.erb
+++ b/app/views/voices/_form.html.erb
@@ -11,16 +11,16 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :line %>
-    <%= f.text_field :line %>
-
-    <%= f.label :voice_file %>
-    <%= f.file_field :voice_file %>
-    <%= f.hidden_field :voice_file_cache %>
-
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+    <%= f.text_field :line, class: 'form-control' %>
   </div>
+  <div class="form-group">
+    <%= f.label :voice_file %>
+    <%= f.file_field :voice_file, class: 'form-control-file' %>
+    <%= f.hidden_field :voice_file_cache %>
+  </div>
+  <%= f.submit class: 'btn btn-primary' %>
+
 <% end %>
+
