--- a/app/views/voices/index.html.erb
+++ b/app/views/voices/index.html.erb
@@ -2,7 +2,10 @@
 
 <h1>Voices</h1>
 
-<table>
+
+<%= link_to 'New Voice', new_voice_path, class: 'btn btn-primary pull-right' %>
+
+<table class="table table-hover">
   <thead>
     <tr>
       <th colspan="3"></th>
@@ -10,9 +13,15 @@
   </thead>
 
   <tbody>
-    <% @voices.each do |voice| %>
-      <tr>
+    <% @voices.each_with_index do |voice, i| %>
+      <tr id="<%= "voice" + i.to_s %>">
         <td><%= voice.line %></td>
+        <td class="audio"><%= audio_tag(voice.voice_file,
+                          autoplay: false,
+                          controls: true,
+                          loop: false,
+                          id: "audio" + i.to_s) %>
+        </td>
         <td><%= link_to 'Show', voice %></td>
         <td><%= link_to 'Edit', edit_voice_path(voice) %></td>
         <td><%= link_to 'Destroy', voice, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -21,6 +30,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Voice', new_voice_path %>
