--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
-
 <header>
-  <nav class="navbar navbar-toggleable-md navbar-inverse ">
+  <nav class="navbar-toggleable-md navbar-inverse ">
     <%= link_to 'キズナアイDB', root_path, class: 'navbar-brand' %>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="nav navbar-nav">
