一覧と詳細の見た目を整えた

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,11 @@
 <header>
-  <nav class="navbar-toggleable-md navbar-inverse ">
-    <%= link_to 'バーチャルYoutuber音声DB', root_path, class: 'navbar-brand' %>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="nav navbar-nav">
-      </ul>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container">
+      <div class="navbar-header">
+        <%= link_to 'バーチャルYoutuber音声DB', root_path, class: 'navbar-brand' %>
+      </div>
+      <div class="navbar-collapse">
+      </div>
     </div>
   </nav>
 </header>
