--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,22 +3,23 @@
   <head>
     <title>バーチャルYoutuber音声DB</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
   </head>
 
   <body>
     <%= render 'layouts/header' %>
-    <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>">
-        <%= message %>
+    <main class="mt-3">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>">
+          <%= message %>
+        </div>
+       <% end %>
+      <div class="container">
+
+        <%= yield %>
       </div>
-     <% end %>
-    <div class="container">
-
-      <%= yield %>
-    </div>
-
+    </main>
   </body>
 </html>
