--- a/app/views/voices/show.html.erb
+++ b/app/views/voices/show.html.erb
@@ -2,29 +2,38 @@
   <%= @voice.line %>
 </h1>
 
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-    <tr id="<%= "voice" + @voice.id.to_s %>">
-      <td><%= @voice.line %></td>
-      <td class="audio"><%= audio_tag(@voice.voice_file,
-                                      autoplay: false,
-                                      controls: true,
-                                      loop: false,
-                                      id: "audio" + @voice.id.to_s) %>
-      </td>
-      <td><%= link_to 'Edit', edit_voice_path(@voice) %></td>
-      <td><%= link_to 'delete', @voice, method: :delete, class: 'btn btn-danger', confirm: 'Are you OK?' %></td>
-    </tr>
-  </tbody>
-</table>
+<div class="container mt-5 mb-3">
+  <div class="row" id="<%= "voice" + @voice.id.to_s %>">
+    <div class="col-12 serif">
+      <%= @voice.line %>
+    </div>
+    <div class="col-12">
+      <%= audio_tag(@voice.voice_file,
+                    autoplay: false,
+                    controls: true,
+                    loop: false,
+                    id: "audio" + @voice.id.to_s) %>
+    </div>
+    <div class="col-2 col-md-1">
+      <%= link_to 'Edit', edit_voice_path(@voice), class: 'btn btn-primary' %>
+    </div>
+    <div class="col-2 col-md-1">
+      <%= link_to 'delete', @voice, method: :delete, class: 'btn btn-danger', confirm: 'Are you OK?' %>
+    </div>
+  </div>
+  <small class="text-muted">
+    セリフ上をクリックorタップでも音声が再生されます。
+  </small>
+</div>
 
 <%= link_to 'Tweet', 'https://twitter.com/share?ref_src=twsrc%5Etfw', class: 'twitter-share-button', data: { size: 'large', text: @voice.line, url: voice_url(@voice), show: { content: 'false' } } %>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<div class="container mb-5">
+  <div class="embed-responsive embed-responsive-16by9">
+    <%= content_tag :iframe, '', src: @voice.embed_url, allowfullscreen: true, class: 'embed-responsive-item' %>
+  </div>
+</div>
+
 
 <%= javascript_include_tag 'voice/show' %>
