--- a/app/views/voices/index.html.erb
+++ b/app/views/voices/index.html.erb
@@ -1,4 +1,17 @@
 <h1>Voices</h1>
+<div class="card bg-light my-4">
+  <div class="card-body">
+    <%= search_form_for @q do |f| %>
+      <div class="form-group" %>
+        <%= f.label :line_cont, 'セリフ検索', class: 'col-3' %>
+        <%= f.search_field :line_cont, class: 'form-control col-12' %>
+      </div>
+      <div class='row d-flex flex-row-reverse w-100'>
+        <%= f.submit class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+</div>
 <div class="clearfix mb-3">
   <%= link_to 'New Voice', new_voice_path, class: 'btn btn-primary float-right' %>
 </div>
