--- a/app/views/voices/index.html.erb
+++ b/app/views/voices/index.html.erb
@@ -6,6 +6,10 @@
         <%= f.label :line_cont, 'セリフ検索', class: 'col-3' %>
         <%= f.search_field :line_cont, class: 'form-control col-12' %>
       </div>
+      <div class="form-group" %>
+        <%= f.label :uploader_name_eq, '投稿者', class: 'col-3' %>
+        <%= f.select :uploader_name_eq, Voice.all.pluck(:uploader_name).uniq, {}, { class: 'form-control col-12' } %>
+      </div>
       <div class='row d-flex flex-row-reverse w-100'>
         <%= f.submit class: 'btn btn-primary' %>
       </div>
