--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,13 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <main class="mt-3">
+    <main>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>">
           <%= message %>
         </div>
        <% end %>
-      <div class="container">
-
+      <div class="container mt-3">
         <%= yield %>
       </div>
     </main>
