--- a/app/views/voices/_form.html.erb
+++ b/app/views/voices/_form.html.erb
@@ -34,7 +34,7 @@
 
   <div class="form-group">
     <%= f.label :line %>
-    <%= f.text_field :line, class: 'form-control' %>
+    <%= f.text_area :line, class: 'form-control', id: 'js-line' %>
   </div>
 
   <div class="form-group">
